# Getdeck-Desktop

./: .gitignore  .pre-commit-config.yaml  README.md  RELEASE.md  bumpversion.sh  index.html  package-lock.json  package.json  rollout.sh  tsconfig.json  tsconfig.tsbuildinfo  updater.json  vite.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: cd.yaml  release_build_linux.yaml  release_build_macos.yaml  release_build_windows.yaml  release_notifications.yaml
scripts/: download-beibootctl.sh
src/: App.svelte  beibootctl.d.ts  beibootctl.js  beibootctl.ts  main.d.ts  main.js  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: connection.rs  heartbeat.rs  main.rs  util.rs
src-tauri/src/connection/: ghostunnel.rs
src-tauri/tests/: connectors.rs
src/auth/: keycloak.ts
src/components/: ClusterTable.vue  Home.vue
src/layouts/default/: Default.vue  NoSidebar.vue
src/plugins/: index.d.ts  index.js  vuetify.d.ts  vuetify.js  vuetify.ts  webfontloader.d.ts  webfontloader.js
src/router/: index.js  index.ts
src/store/: app.d.ts  app.js  app.ts  index.d.ts  index.js
src/styles/: settings.scss
src/views/: ClusterCreate.vue  Clusters.vue  Home.vue  Login.vue
