[package]
name = "beiboot_desktop"
version = "0.1.2"
description = "Getdeck-Desktop allows to manage Getdeck Kubernetes clusters and connect to them from a local machine."
authors = ["Tobias Frölich <tobias@blueshoe.io>", "Michael Schilonka <michael@blueshoe.io>"]
license = "../LICENSE"
repository = "https://github.com/Getdeck/Getdeck-Desktop/"
default-run = "beiboot_desktop"
edition = "2021"
rust-version = "1.59"
publish = false

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["process-command-api", "shell-open", "updater"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
strum = "0.25.0"
strum_macros = "0.25.1"
bollard = "0.14.0"
futures = "0.3.28"
tokio = "1.29.1"
shellexpand = "3.1.0"
futures-util = "0.3"
tauri-plugin-oauth = "0.0.0-alpha.0"
sentry = "0.31.5"
tauri-plugin-localhost = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
portpicker = "0.1"
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
httparse = "1.8.0"
reqwest = "0.11.18"
tokio-test = "0.4.2"
mockito = "1.1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
